crates/weaver-e2e/tests/snapshots/refactor_rope_cli_snapshots__refactor_actuator_isolation.snap
---
source: crates/weaver-e2e/tests/refactor_rope_cli_snapshots.rs
expression: transcript
---
Transcript {
    command: "weaver --daemon-socket tcp://<daemon-endpoint> --output json act refactor --provider rope --refactoring rename --file src/main.py new_name=renamed_symbol offset=4",
    status: 0,
    stdout: "{\"files_deleted\":0,\"files_written\":1,\"status\":\"ok\"}",
    stderr: "",
    requests: [
        Object {
            "arguments": Array [
                String("--provider"),
                String("rope"),
                String("--refactoring"),
                String("rename"),
                String("--file"),
                String("src/main.py"),
                String("new_name=renamed_symbol"),
                String("offset=4"),
            ],
            "command": Object {
                "domain": String("act"),
                "operation": String("refactor"),
            },
        },
    ],
}
