crates/weaver-e2e/tests/snapshots/refactor_rope_cli_snapshots__refactor_automatic_rope_routing.snap
---
source: crates/weaver-e2e/tests/refactor_rope_cli_snapshots.rs
expression: transcript
---
Transcript {
    command: "weaver --daemon-socket tcp://<daemon-endpoint> --output json act refactor --provider rope --refactoring rename --file src/main.py --position 1:5 new_name=renamed_symbol",
    status: 0,
    stdout: "{\"files_deleted\":0,\"files_written\":1,\"status\":\"ok\"}",
    stderr: "",
    requests: [
        Object {
            "arguments": Array [
                String("--provider"),
                String("rope"),
                String("--refactoring"),
                String("rename"),
                String("--file"),
                String("src/main.py"),
                String("--position"),
                String("1:5"),
                String("new_name=renamed_symbol"),
            ],
            "command": Object {
                "domain": String("act"),
                "operation": String("refactor"),
            },
        },
    ],
}
